--- a/vadginger-alpha/app/views/Activities/_form.html
+++ b/vadginger-alpha/app/views/Activities/_form.html
@@ -248,7 +248,7 @@
   <input id="${it?.id}" name="attendant_type" type="radio" class="rdbx" value="${it?.id}" ${checked} title="Doelgroep">${it}&nbsp;&nbsp;&nbsp;
   <!-- <span class="field" id="${it?.id}cont"></span><br> -->
   <!-- <option value="${it?.id}" ${selected ? 'selected'.raw() : ''}>${it}</option> -->
-  %{ } }%
+  %{ } }%<input type="hidden" id="attendant_type_h" title="Doelgroep" />
   <div class="field" id="atd_type"></div>
   %{
   if (entity?.id) {
@@ -440,12 +440,12 @@
       %{
       selected = false;
       }%
-      <input id="${ob?.id}" name="eval_type_${ob?.id}" type="checkbox"
+      <input id="${ob?.id}" name="eval_type_${ob?.id}" type="checkbox" title="EvaluationHow"
       ${(entity?.activityEvaluvatorsId?.evalTypeId?.evalType && ob?.evalType == entity?.activityEvaluvatorsId?.evalTypeId?.evalType[0]) ? 'checked':''}
       />
       <label class="choice" for="eval_type_${ob?.id}">${ob?.evalType}</label>
       <!-- <option value="${it?.id}" ${selected ? 'selected'.raw() : ''}>${it}</option> -->
-      %{ } }%
+      %{ } }%<input type="hidden" id="eval_type_h" title="EvaluationHow"/>
     </div>
     <span class="error">${errors.forKey('entity.evaluvated')}</span>
   </div>
@@ -461,7 +461,7 @@
       />${it}&nbsp;&nbsp;&nbsp;
       <!-- <span class="field" id="${it?.id}cont"></span><br> -->
       <!-- <option value="${it?.id}" ${selected ? 'selected'.raw() : ''}>${it}</option> -->
-      %{ } }%
+      %{ } }%<input type="hidden" id="eval_who_h" title="EvaluationWho"/>
     </div>
     <span class="error">${errors.forKey('entity.evaluvated')}</span>
   </div>
@@ -506,28 +506,50 @@
       $("label.error").remove();
       $("form").validity(function() {
         var test = ev;
-        test = $("input[name='entity.beschrijving']");
+        test = $("input[name='attendant_type']");
         $("input[name='entity.beschrijving']").require();
         $("input[name='activity_date']").require();
         $("input[name='entity.duur']").require().match('integer', "De duur moet een positief geheel getal zijn");
         $("#organizationSelect").require();
         $("#locationSelect").require();
         $("#activity_type_select").require();
+        if($("#subActivityTypeSelect").length){
+          $("#activity_type_select").assert(
+            ($("#subActivityTypeSelect").val()),
+                "Gelieve minstens één detail soort aan te duiden"
+            );
+        }
 
-        if ($("#Sector input:checked").length == 0) {
+
+        $("#attendant_type_h").assert(
+          $("input[name='attendant_type']:checked").length != 0,
+              "Gelieve minstens één doelgroep aan te vinken"
+          );
+
+        if ($("#Sector input:checked").length == 0)
             $("#Sector input:hidden:first").require("Gelieve minstens één sector aan te vinken");
-        }
-        if ($("#atd_type input:checked").length == 0) {
+        $(".subSectorSelect").each(function(index, elem){
+          if($(elem).val()==undefined){
+            var sectorId = elem.name.substring(11);
+            $("#hs_"+sectorId).require("Gelieve minstens één detail sector aan te duiden");
+          }
+        });
+        if ($("#atd_type input:checked").length == 0)
             $("#atd_type input:hidden:first").require("Gelieve minstens één type aanwezigen van deze doelgroep aan te vinken");
-        }
         if($("#TheItem").length){
           if ($("#TheItem input:checked").length == 0) {
               $("#TheItem input:hidden:first").require("Gelieve minstens één item aan te vinken");
           }
         }
-        if ($("#Materiaal input:checked").length == 0) {
-            $("#Materiaal input:hidden:first").require("Gelieve minstens één gebruikt materiaal aan te vinken");
+        if ($("#evaluvated").css("display")!='none' && $("#evaluvated input[type='checkbox']:checked").length == 0){
+            $("#evaluvated #eval_type_h").require("Gelieve aan te duiden hoe de activiteit werd geëvalueerd");
         }
+        if ($("#evaluvated").css("display")!='none' && $("#evaluvated input[name='evaluvators'][type='radio']:checked").length == 0){
+            $("#evaluvated #eval_who_h").require("Gelieve aan te duiden door wie de activiteit werd geëvalueerd");
+        }
+
+        if ($("#Materiaal input:checked").length == 0)
+            $("#Materiaal input:hidden:first").require("Gelieve minstens één gebruikt materiaal aan te vinken");
         var participants = $("#atd_type input[name='entity.totalParticipants']");
         if(participants.length){
           try{
