--- a/vadginger-alpha/app/views/Activities/searchForm.html
+++ b/vadginger-alpha/app/views/Activities/searchForm.html
@@ -14,9 +14,8 @@
 #{if userRole.compareTo(models.RoleType.SUPER_ADMIN) == 0}
 
   <div class="row">
-  <!-- <div class="label">Internal Activity</div> -->
+  <div class="label">Centra en Gebruikers:</div>
   <div class="field">
-    Centra en Gebruikers:<br />
     <select name="centrum" id="centrumselector">
            <option value="">Selecteer een centrum</option>
         %{ models.Centrums.find("isActive=1").fetch().sort{ it.naam }.each() { }%
@@ -28,6 +27,7 @@
     </select>
   </div>
   </div>
+  <hr />
   <script type="text/javascript">
     $(function() {
      $("#centrumselector").change(function(ev){
@@ -44,9 +44,8 @@
 #{elseif userRole.compareTo(models.RoleType.ORG_ADMIN) == 0}
 
   <div class="row">
-  <!-- <div class="label">Internal Activity</div> -->
+  <div class="label">Gebruikers:</div>
   <div class="field">
-    Gebruikers:<br />
     <select name="gebruiker" id="gebruikerselector">
            <option value="">Selecteer een gebruiker</option>
         %{ models.VadGingerUser.find("centrumId = "+centrumId.id+" and isActive=1").fetch().sort{ it.userID }.each() { }%
@@ -55,6 +54,7 @@
     </select>
   </div>
   </div>
+  <hr />
   <script type="text/javascript">
     $(function() {
      $("#centrumselector").change(function(ev){
@@ -70,9 +70,12 @@
 
 
  <div class="row">
-  <!-- <div class="label">Internal Activity</div> -->
+  <div class="label">Interne activiteit?</div>
   <div class="field">
-    <input name="internal_activity" type="checkbox" class="check_box" value="1">&nbsp;Interne activiteit
+      <input type="radio" name="internal_activity" value="yes"/> Ja&nbsp;&nbsp;&nbsp;&nbsp;
+      <input type="radio" name="internal_activity" value="no"/> Neen&nbsp;&nbsp;&nbsp;&nbsp;
+      <input type="radio" name="internal_activity" value="both" checked /> Om het even
+
          
   </div>
   <span class="error">${errors.forKey('entity.internalActivity')}</span>
@@ -227,8 +230,8 @@
   			$("#hiddenLoc").empty();
   			var selectedLocation = $("#locationSelect option:selected").val();
   			 //var listLocations = "/suborganizations/list?id="+selectedOrganization+"&centrumId=${centrumId.id}";
-  			var listLocations = #{jsAction @Locationss.list(':id')/}
-			$("#hiddenLoc").load(listLocations({id: selectedLocation}), function(){});
+  			var listLocations = #{jsAction @Locationss.list(':id', ':filter')/}
+			$("#hiddenLoc").load(listLocations({id: selectedLocation, filter: true}), function(){});
   		});
   	</script>
   	<!-- </select> -->
