--- a/vadginger-alpha/app/views/Statics/passforgot.html
+++ b/vadginger-alpha/app/views/Statics/passforgot.html
@@ -2,7 +2,7 @@
 <div class="statics">
 <h2>Paswoord vergeten?</h2>
 <div class="content">
-<p>Paswoord vergeten? Neem contact op met uw Ginger Admin:
+<p>Paswoord vergeten? Neem contact op met de Ginger-beheerder op VAD:
 <ul>
   <li>Per mail: <a href="mailto:info@vadginger.be">info@vadginger.be</a></li>
   <li>Telefonisch: 02 423 03 58</li>
