--- a/vadginger-alpha/app/views/main.html
+++ b/vadginger-alpha/app/views/main.html
@@ -37,7 +37,7 @@
 <body class="yui-skin-sam">
 <div id="doc3" class="yui-t3">
   <div id="hd" role="banner">
-    <h1><a href="/">VAD Ginger</a><!--img src="http://www.vad.be/images/logo.jpg" style="float:right;"--></h1>
+    <h1><a href="/">Gingerregistratie suïcidepreventie Vlaanderen</a><!--img src="http://www.vad.be/images/logo.jpg" style="float:right;"--></h1>
     <span class="login">
       #{if session.get("username") == null}
       <a href="/secure/login">Gebruiker login</a>
