--- a/vadginger-alpha/app/views/Locationss/_form.html
+++ b/vadginger-alpha/app/views/Locationss/_form.html
@@ -1,4 +1,5 @@
 
+ <input type="hidden" name="entity.isCluster" value="false"/>
  <div class="row">
   <div class="label">Afhankelijk van</div>
   <div class="field">
@@ -75,27 +76,6 @@
   <span class="error">${errors.forKey('entity.beschrijving')}</span>
 </div>
 
-
- <div class="row">
-  <div class="label">Is Cluster</div>
-  <div class="field">
-    
-      <input type="checkbox" name="entity.isCluster"
-        ${entity?.isCluster ? 'checked':''}
-      />
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-  </div>
-  <span class="error">${errors.forKey('entity.isCluster')}</span>
-</div>
 
 
  <div class="row">
