--- a/vadginger-alpha/app/views/VadGingerUsers/changePasswordForm.html
+++ b/vadginger-alpha/app/views/VadGingerUsers/changePasswordForm.html
@@ -8,10 +8,10 @@
  <div class="row">
   <div class="label">Oud wachtwoord:</div>
   <div class="field">
-      <input type="password" name="oud_password" id="oudpassword" />
+      <input type="password" name="oud_password" id="oudpassword"  title="Oud paswoord" />
        <span id="invalid_oud_password"></span>
       #{if invalidPassword}
-      <span>Invalid Password</span>
+      <span class="error">Het paswoord was niet het juiste voor jouw gebruikersnaam</span>
       #{/if}
   </div>
   </div>
@@ -19,7 +19,7 @@
   <div class="row">
   <div class="label">Nieuw wachtwoord:</div>
   <div class="field">
-      <input name="c_password" id="password" type="password"/>
+      <input name="c_password" id="password" type="password" title="Nieuw paswoord" />
       
       <span id="invalidPassword"></span>
   </div>
@@ -27,31 +27,31 @@
   <div class="row">
   <div class="label">Bevestig het nieuwe wachtwoord:</div>
   <div class="field">
-      <input name="conf_password" id="c_password" type="password"/>
+      <input name="conf_password" id="c_password" type="password" title="Paswoord bevestiging" />
       
       <span id="invalidPassword"></span>
   </div>
   </div>
-<script>
-$("form").submit(function(){
-	if($("#oudpassword").val().length<5) {
-		$('#invalid_oud_password').text("Invalid Password").show();
-		return false;
-	} else {
-		$('#invalid_oud_password').hide();
-		}
-	if($("#password").val().length<5 || $("#password").val()!=$("#c_password").val()) {
-		$('#invalidPassword').text("Password do not match").show();
-		return false;
-	} else {
-		$('#invalidPassword').hide();
-		return true;
-	}
-	
-	
-});
-</script>
-	<button class="submit ui-corner-all submitbutton"">Opslaan</button>
+  <input type="submit" class="submit ui-corner-all" value="Opslaan" />
   <button class="submit ui-corner-all" onclick="history.back();return false;">Terug</button>
 #{/form}
 </div>
+<script type="text/javascript">
+    // Select all of the forms on the page (in this case the only one)
+    // and call 'validity' on the result.
+    $(function() {
+        $("form").validity(function() {
+          $("input[type=password]").require();
+          $("#password").
+            require().
+            assert(
+            ($("#password").val().length>5),
+                "Gelieve een paswoord van minstens 6 karakters in te geven"
+            ).
+            assert(
+            ($("#password").val()==$("#c_password").val()),
+                "Het nieuwe paswoord verschilt van de bevestiging. Probeer opnieuw"
+            );
+        });
+    });
+</script>
