--- a/vadginger-alpha/app/views/Activities/_form.html
+++ b/vadginger-alpha/app/views/Activities/_form.html
@@ -1,7 +1,23 @@
 %{user_cur = models.VadGingerUser.find("id is " + session.get("userId")).first();
   	userRole = user_cur.role;
-  	centrumId = user_cur.centrumId;%}
-
+  	centrumId = user_cur.centrumId;
+    isVad = user_cur.userID.toLowerCase().startsWith("vad");
+    isRegional = user_cur.centrumId.isRegional%}
+<script>
+  var pressId = 100;
+#{if isVad}
+  window.isVad = true;
+#{/if}
+#{else}
+  window.isVad = false;
+#{/else}
+#{if isRegional}
+  window.isRegional = true;
+#{/if}
+#{else}
+  window.isRegional = false;
+#{/else}
+</script>
 <div class="row">
   <div class="label">Omschrijving van de activiteit:</div>
   <div class="field">
@@ -116,21 +132,23 @@
   </div>
   <div class="field" id="Sector">
 
-    %{ models.Sectors.find("ouder is null and isActive=1").fetch().sort{ it.id }.each() { }%
-
     %{
-    selected = false;
-    if (entity?.locationId?.id == it.id) {
-    selected = true
-    }
+      models.Sectors.find("ouder is null and isActive=1").fetch().sort{ it.id }.each() {
     }%
 
+      %{
+        selected = false;
+        if (entity?.locationId?.id == it.id) {
+          selected = true
+        }
+      }%
 
-    <input id="${it?.id}" name="sector_${it?.id}" type="checkbox" class="chkbx" title="Sector" >
-    <label class="choice" for="sector_${it?.id}">${it?.naam}</label>
-    <input type="hidden" value="" title="Sector" id="hs_${it?.id}"/>
-    <span class="field" id="${it?.id}cont"></span><br>
-    <!-- <option value="${it?.id}" ${selected ? 'selected'.raw() : ''}>${it}</option> -->
+
+      <input id="${it?.id}" name="sector_${it?.id}" type="checkbox" class="chkbx" title="Sector" >
+      <label class="choice" for="sector_${it?.id}">${it?.naam}</label>
+      <input type="hidden" value="" title="Sector" id="hs_${it?.id}"/>
+      <span class="field" id="${it?.id}cont"></span><br>
+      <!-- <option value="${it?.id}" ${selected ? 'selected'.raw() : ''}>${it}</option> -->
     %{ } }%
 
 
@@ -142,9 +160,13 @@
       var currentId = $(this).attr('id');
       var currentIdcont = "#" + currentId + "cont";
       if ($input.is(':checked')) {
-        var listLocations = #{jsAction @Sectorss.list(':id')/}
-          $(currentIdcont).load(listLocations({id: currentId}), function() {
-          });
+        if(currentId==pressId && isVad){
+          $(currentIdcont).html("<div class=\"label\">Over welke media gaat het? (namen)</div><div class='field'><textarea name='entity.pers' rows=\"5\" cols=\"100\" ></textarea></div>");
+        }
+        else {
+	        var listLocations = #{jsAction @Sectorss.list(':id')/}
+          $(currentIdcont).load(listLocations({id: currentId}), function () {});
+        }
       }
       else {
         $(currentIdcont).html("");
@@ -256,8 +278,8 @@
   <script>
     $(document).ready(function(){
       var currentIdcont = "#atd_type";
-      var listAtdTypes = #{jsAction @AttendantTypes.filledList(':id')/}
-      $(currentIdcont).load(listAtdTypes({id: ${entity.id}}), function() {
+      var listAtdTypes = #{jsAction @AttendantTypes.filledList(':id', ':usedBy')/}
+      $(currentIdcont).load(listAtdTypes({id: ${entity.id}, usedBy: isVad ? 'VAD' : 'NOTVAD'}), function() {
       });
     })
   </script>
@@ -270,8 +292,8 @@
       var currentId = $(this).attr('id');
       var currentIdcont = "#atd_type";
       if ($input.is(':checked')) {
-        var listAtdTypes = #{jsAction @AttendantTypes.list(':id')/}
-          $(currentIdcont).load(listAtdTypes({id: currentId}), function() {
+        var listAtdTypes = #{jsAction @AttendantTypes.list(':id', ':usedBy')/}
+          $(currentIdcont).load(listAtdTypes({id: currentId, usedBy: isVad ? 'VAD' : 'NOTVAD'}), function() {
           });
       }
       else {
@@ -302,15 +324,31 @@
   </div>
   <!-- <span class="error">${errors.forKey('entity.userId')}</span> -->
    <div class="field" id="hiddenActType"></div>
+   <div class="field" id="hiddenIndType" style="display: none;">
+     <div class="label">In welke indicatoren van de Vlaamse overheid past de activiteit?</div>
+     <div class="field">
+       <input id="activityIndicators_3A" name="activityIndicators_3A" type="checkbox" title="Activity indicator">
+       <label class="choice" for="activityIndicators_3A">Indicator 3A: overleg met (inter)gemeentelijke preventiewerkers uit de regio</label>
+       <br />
+       <input id="activityIndicators_3B" name="activityIndicators_3B" type="checkbox" title="Activity indicator">
+       <label class="choice" for="activityIndicators_3A">Indicator 3B: sectoraal of intersectoraal overleg</label>
+     </div>
+   </div>
 
   <script>
     $("#activity_type_select").change(
       function() {
-        $("#hiddenOrg").empty();
+        //$("#hiddenOrg").empty();
         var selectedActivityType = $("#activity_type_select option:selected").val();
-        var listLocations = #{jsAction @ActivityTypes.list(':id')/}
-          $("#hiddenActType").load(listLocations({id: selectedActivityType}), function() {
+        var listLocations = #{jsAction @ActivityTypes.list(':id', ':usedBy')/}
+          $("#hiddenActType").load(listLocations({id: selectedActivityType, usedBy: isVad ? 'VAD' : 'NOTVAD'}), function () {
           });
+        if(isRegional && selectedActivityType == 1){
+            $("#hiddenIndType").show()
+        }
+        else{
+          $("#hiddenIndType").hide()
+        }
       });
   </script>
 </div>
